[tool.poetry]
name = "pt-api"
version = "0.1.0"
description = ""
authors = ["TM <mihai.tatsiana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
pandas = "^2.1.1"
pycountry = "^22.3.5"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
